[workspace]
members = [
  "beserial",
  "beserial/beserial_derive",
  "block-production",
  "blockchain",
  "blockchain-proxy",
  "bls",
  "client",
  "collections",
  "consensus",
  "database",
  "genesis",
  "genesis-builder",
  "handel",
  "hash",
  "hash/hash_derive",
  "key-derivation",
  "keys",
  "lib",
  "log",
  "macros",
  "mempool",
  "metrics-server",
  "mnemonic",
  "nano-primitives",
  "nano-primitives/pedersen-generators",
  "nano-zkp",
  "nano-blockchain",
  "network-interface",
  "network-libp2p",
  "network-mock",
  "peer-address",
  "primitives",
  "primitives/account",
  "primitives/block",
  "primitives/mmr",
  "primitives/subscription",
  "primitives/transaction",
  "primitives/trie",
  "rpc-client",
  "rpc-interface",
  "rpc-server",
  "spammer",
  "tendermint",
  "test-log",
  "test-log/proc-macro",
  "test-utils",
  "tools",
  "transaction-builder",
  "utils",
  "validator",
  "validator-network",
  "vrf",
  "wallet",
  "zkp-component",
]

# Force nimiq-bls and nimiq-nano-zkp to be built with optimization level 2 in
# the test profiles. This is necessary in order to have decent tests
# performance. We do the same with nimiq-bls dev profile because it is compiled
# for a lot of other crates's tests.
#
# This turned out to be faster than using the highest optimization level 3.
[profile.dev.package.nimiq-bls]
opt-level = 2

[profile.test.package.nimiq-bls]
opt-level = 2

[profile.dev.package.nimiq-nano-primitives]
opt-level = 2

[profile.test.package.nimiq-nano-primitives]
opt-level = 2

[profile.dev.package.nimiq-nano-zkp]
opt-level = 2

[profile.test.package.nimiq-nano-zkp]
opt-level = 2

[profile.dev.package.beserial]
opt-level = 2

[profile.test.package.beserial]
opt-level = 2

[profile.dev.package.nimiq-pedersen-generators]
opt-level = 2

[profile.test.package.nimiq-pedersen-generators]
opt-level = 2

[profile.release]
lto = "thin"

[profile.release-with-debug]
inherits = "release"
debug = true

# Force arkworks to be built with optimization level 2.
[profile.dev.package.ark-ff]
opt-level = 2

[profile.test.package.ark-ff]
opt-level = 2

[profile.dev.package.ark-ec]
opt-level = 2

[profile.test.package.ark-ec]
opt-level = 2

[profile.dev.package.ark-mnt4-753]
opt-level = 2

[profile.test.package.ark-mnt4-753]
opt-level = 2

[profile.dev.package.ark-mnt6-753]
opt-level = 2

[profile.test.package.ark-mnt6-753]
opt-level = 2

[profile.dev.package.ark-crypto-primitives]
opt-level = 2

[profile.test.package.ark-crypto-primitives]
opt-level = 2
