[workspace]
##
## !!! NOTE: If you add a nimiq module here, also add it to log/src/lib.rs !!!
##
members = [
  "beserial",
  "beserial/beserial_derive",
  "block-production",
  "blockchain",
  "blockchain-interface",
  "blockchain-proxy",
  "bls",
  "client",
  "collections",
  "consensus",
  "database",
  "database/database-value",
  "genesis",
  "genesis-builder",
  "handel",
  "hash",
  "hash/hash_derive",
  "key-derivation",
  "keys",
  "lib",
  "light-blockchain",
  "log",
  "macros",
  "mempool",
  "metrics-server",
  "mnemonic",
  "network-interface",
  "network-libp2p",
  "network-mock",
  "primitives",
  "primitives/account",
  "primitives/accounts-tree",
  "primitives/block",
  "primitives/mmr",
  "primitives/subscription",
  "primitives/transaction",
  "primitives/trie",
  "rpc-client",
  "rpc-interface",
  "rpc-server",
  "spammer",
  "tendermint",
  "test-log",
  "test-log/proc-macro",
  "test-utils",
  "tools",
  "transaction-builder",
  "utils",
  "validator",
  "validator-network",
  "vrf",
  "wallet",
  "web-client",
  "zkp",
  "zkp-circuits",
  "zkp-component",
  "zkp-component/zkp-test-gen",
  "zkp-primitives",
  "zkp-primitives/pedersen-generators",
]

resolver = "2"

# Force nimiq-bls and nimiq-zkp to be built with optimization level 2 in
# the test profiles. This is necessary in order to have decent tests
# performance. We do the same with nimiq-bls dev profile because it is compiled
# for a lot of other crates's tests.
#
# This turned out to be faster than using the highest optimization level 3.
[profile.dev.package.nimiq-bls]
opt-level = 2

[profile.test.package.nimiq-bls]
opt-level = 2

[profile.dev.package.nimiq-zkp-circuits]
opt-level = 2

[profile.test.package.nimiq-zkp-circuits]
opt-level = 2

[profile.dev.package.nimiq-zkp-primitives]
opt-level = 2

[profile.test.package.nimiq-zkp-primitives]
opt-level = 2

[profile.dev.package.nimiq-zkp]
opt-level = 2

[profile.test.package.nimiq-zkp]
opt-level = 2

[profile.dev.package.beserial]
opt-level = 2

[profile.test.package.beserial]
opt-level = 2

[profile.dev.package.nimiq-pedersen-generators]
opt-level = 2

[profile.test.package.nimiq-pedersen-generators]
opt-level = 2

[profile.release]
lto = "thin"

[profile.release-with-debug]
debug = true
inherits = "release"

# Force arkworks to be built with optimization level 2.
[profile.dev.package.ark-ff]
opt-level = 2

[profile.test.package.ark-ff]
opt-level = 2

[profile.dev.package.ark-ec]
opt-level = 2

[profile.test.package.ark-ec]
opt-level = 2

[profile.dev.package.ark-mnt4-753]
opt-level = 2

[profile.test.package.ark-mnt4-753]
opt-level = 2

[profile.dev.package.ark-mnt6-753]
opt-level = 2

[profile.test.package.ark-mnt6-753]
opt-level = 2

[profile.dev.package.ark-crypto-primitives]
opt-level = 2

[profile.test.package.ark-crypto-primitives]
opt-level = 2

[patch.crates-io]
ark-ec = { git = "https://github.com/paberr/algebra", branch = "pb/0.4" }
ark-ff = { git = "https://github.com/paberr/algebra", branch = "pb/0.4" }
ark-r1cs-std = { git = "https://github.com/paberr/r1cs-std", branch = "pb/fix-pedersen" }
