[package]
name = "nimiq-accounts"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Persistent accounts storage for Nimiq's Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
hex = "0.3"
beserial = "0.1"
nimiq-keys = "0.1"
nimiq-primitives = { features = ["coin", "networks", "policy"], version = "0.1" }
nimiq-hash = "0.1"
nimiq-account = "0.1"
nimiq-block = "0.1"
nimiq-transaction = "0.1"
nimiq-database = { features = ["full-nimiq"], version = "0.1" }
nimiq-tree-primitives = "0.1"
