[package]
name = "nimiq-accounts"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Persistent accounts storage for Nimiq's Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
beserial = { path = "../beserial", version = "0.1" }
nimiq-account = { path = "../primitives/account", version = "0.1" }
nimiq-database = { path = "../database", features = ["full-nimiq"], version = "0.1" }
nimiq-hash = { path = "../hash", version = "0.1" }
nimiq-keys = { path = "../keys", version = "0.1" }
nimiq-primitives = { path = "../primitives", features = ["coin", "networks", "policy"], version = "0.1" }
nimiq-transaction = { path = "../primitives/transaction", version = "0.1" }
nimiq-tree-primitives = { path = "./tree-primitives", version = "0.1" }

hex = "0.4"
