[package]
name = "nimiq-accounts"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Persistent accounts storage for Nimiq's Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
beserial = { path = "../beserial" }
nimiq-account = { path = "../primitives/account" }
nimiq-database = { path = "../database", features = ["full-nimiq"] }
nimiq-hash = { path = "../hash" }
nimiq-keys = { path = "../keys" }
nimiq-primitives = { path = "../primitives", features = ["coin", "networks", "policy"] }
nimiq-transaction = { path = "../primitives/transaction" }
nimiq-tree = { path = "../primitives/tree" }

hex = "0.4"
