[package]
name = "beserial"
version = "0.1.0"
authors = ["Marvin W <git@larma.de>"]
edition = "2018"
description = "A serializer that uses BigEndian encoding that also allows to specify types for length fields"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain", "serialization"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1.2"
num = "0.2"
failure = "0.1"
bitvec = { version = "0.10", optional = true }
