[package]
name = "beserial"
version = "0.1.0"
authors = ["Marvin W <git@larma.de>"]
edition = "2018"
description = "A serializer that uses BigEndian encoding that also allows to specify types for length fields"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain", "serialization"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
bitvec = { version = "0.17", optional = true }
libp2p = { version = "0.34", optional = true }
byteorder = "1.2"
thiserror = "1.0"
num = "0.2"

[features]
net = []
