[package]
name = "beserial"
version = "0.1.0"
authors = ["Marvin W <git@larma.de>"]
edition = "2021"
description = "A serializer that uses BigEndian encoding that also allows to specify types for length fields"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain", "serialization"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
arrayvec = "0.7.2"
beserial_derive = { path = "beserial_derive", version = "0.1.0", optional = true }
bitvec = { version = "1.0", optional = true }
libp2p = { git = "https://github.com/jsdanielh/rust-libp2p.git", default-features = false, optional = true }
byteorder = "1.2"
thiserror = "1.0"
num-traits = "0.2"

[features]
derive = ["beserial_derive"]
net = []
