[package]
name = "nimiq-block-production-albatross"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Albatross Block Production logic for the Nimiq Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
beserial = "0.1"
nimiq-block-albatross = "0.1"
nimiq-blockchain-albatross = "0.1"
nimiq-blockchain-base = "0.1"
nimiq-bls = "0.1"
nimiq-collections = "0.1"
nimiq-database = "0.1"
nimiq-hash = "0.1"
nimiq-keys = "0.1"
nimiq-mempool = "0.1"
nimiq-network-primitives = { version = "0.1", features = ["networks"] }
nimiq-primitives = "0.1"
log = "0.4"

[dev-dependencies]
hex = "0.3"
nimiq-account = "0.1"
nimiq-database = "0.1"
nimiq-transaction = "0.1"
nimiq-collections = "0.1"