[package]
name = "nimiq-block-production-albatross"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Albatross Block Production logic for the Nimiq Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
log = "0.4"

beserial = { path = "../beserial", version = "0.1" }
nimiq-account = { path = "../primitives/account", version = "0.1" }
nimiq-block-albatross = { path = "../primitives/block-albatross", version = "0.1" }
nimiq-blockchain-albatross = { path = "../blockchain-albatross", version = "0.1" }
nimiq-blockchain-base = { path = "../blockchain-base", version = "0.1" }
nimiq-bls = { path = "../bls", version = "0.1" }
nimiq-collections = { path = "../collections", version = "0.1" }
nimiq-database = { path = "../database", version = "0.1" }
nimiq-genesis = { path = "../genesis", version = "0.1" }
nimiq-hash = { path = "../hash", version = "0.1" }
nimiq-keys = { path = "../keys", version = "0.1" }
nimiq-mempool = { path = "../mempool", version = "0.1" }
nimiq-primitives = { path = "../primitives", version = "0.1" }
nimiq-vrf = { path = "../vrf", version = "0.1" }

[dev-dependencies]
hex = "0.4"

nimiq-account = { path = "../primitives/account", version = "0.1" }
nimiq-collections = { path = "../collections", version = "0.1" }
nimiq-database = { path = "../database", version = "0.1" }
nimiq-transaction = { path = "../primitives/transaction", version = "0.1" }
