[package]
name = "nimiq-block-production"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Block Production logic for Nimiq's Albatross implementation"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
hex = "0.4"
log = { package = "tracing", version = "0.1", features = ["log"] }
parking_lot = "0.12"
rand = "0.8"
serde = "1.0"

nimiq-account = { path = "../primitives/account" }
nimiq-block = { path = "../primitives/block" }
nimiq-blockchain = { path = "../blockchain" }
nimiq-blockchain-interface = { path ="../blockchain-interface" }
nimiq-bls = { path = "../bls" }
nimiq-collections = { path = "../collections" }
nimiq-database = { path = "../database" }
nimiq-genesis = { path = "../genesis" }
nimiq-hash = { path = "../hash" }
nimiq-keys = { path = "../keys" }
nimiq-primitives = { path = "../primitives" }
nimiq-tendermint = { path = "../tendermint" }
nimiq-transaction = { path = "../primitives/transaction" }
nimiq-vrf = { path = "../vrf" }
nimiq-utils = { path = "../utils"}

[dev-dependencies]
rand = "0.8"
tempfile = "3.3"

nimiq-test-log = { path = "../test-log" }
# This adds a circular dev-dependency which is fine but breaks VS code rust-analyzer.
# See https://github.com/rust-analyzer/rust-analyzer/issues/14167
nimiq-genesis-builder = { path = "../genesis-builder" }
nimiq-serde = { path = "../serde" }
nimiq-test-utils = { path = "../test-utils" }
nimiq-trie = { path = "../primitives/trie" }
nimiq-transaction-builder = { path = "../transaction-builder" }

[features]
default = []
test-utils = []
