[package]
name = "nimiq-block-production"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Block Production logic for Nimiq's Albatross implementation"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
hex = "0.4"
log = { package = "tracing", version = "0.1", features = ["log"] }
parking_lot = "0.12"
rand = "0.8"
serde = "1.0"

nimiq-account = { workspace = true }
nimiq-block = { workspace = true }
nimiq-blockchain = { workspace = true }
nimiq-blockchain-interface = { workspace = true }
nimiq-bls = { workspace = true }
nimiq-collections = { workspace = true }
nimiq-database = { workspace = true }
nimiq-genesis = { workspace = true }
nimiq-hash = { workspace = true }
nimiq-keys = { workspace = true }
nimiq-primitives = { workspace = true }
nimiq-tendermint = { workspace = true, optional = true }
nimiq-transaction = { workspace = true }
nimiq-vrf = { workspace = true }
nimiq-utils = { workspace = true }

[dev-dependencies]
rand = "0.8"
tempfile = "3.6"

nimiq-test-log = { workspace = true }
# This adds a circular dev-dependency which is fine but breaks VS code rust-analyzer.
# See https://github.com/rust-analyzer/rust-analyzer/issues/14167
nimiq-genesis-builder = { workspace = true }
nimiq-serde = { workspace = true }
nimiq-tendermint = { workspace = true }
nimiq-test-utils = { workspace = true }
nimiq-transaction-builder = { workspace = true }
nimiq-trie = { workspace = true }

[features]
default = []
test-utils = ["nimiq-tendermint"]
