[package]
name = "nimiq-blockchain-albatross"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Persistent block storage for Nimiq's Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
thiserror = "1.0"
hex = "0.4"
log = "0.4"
parking_lot = "0.9"
rand = "0.7"

merkle-mountain-range = { git = "https://github.com/nimiq/merkle-mountain-range", branch= "main"}

beserial = { path = "../beserial", version = "0.1" }
beserial_derive = { path = "../beserial/beserial_derive", version = "0.1" }
nimiq-account = { path = "../primitives/account", version = "0.1" }
nimiq-accounts = { path = "../accounts", version = "0.1" }
nimiq-block-albatross = { path = "../primitives/block-albatross", version = "0.1" }
nimiq-bls = { path = "../bls", version = "0.1", features = ["beserial"] }
nimiq-collections = { path = "../collections", version = "0.1" }
nimiq-database = { path = "../database", version = "0.1", features = ["full-nimiq"] }
nimiq-genesis = { path = "../genesis", version = "0.1" }
nimiq-hash = { path = "../hash", version = "0.1" }
nimiq-keys = { path = "../keys", version = "0.1" }
nimiq-primitives = { path = "../primitives", version = "0.1" }
nimiq-transaction = { path = "../primitives/transaction", version = "0.1" }
nimiq-tree-primitives = { path = "../accounts/tree-primitives", version = "0.1" }
nimiq-utils = { path = "../utils", version = "0.1", features = ["observer", "unique-ptr", "iterators", "time", "math"] }
nimiq-vrf = { path = "../vrf", version = "0.1" }

[dev-dependencies]
atomic = "0.4"

nimiq-block-production-albatross = { path = "../block-production-albatross", version = "0.1", features = ["test-utils"] }
nimiq-nano-sync = { path= "../nano-sync", version = "0.1" }

[features]
default = ["transaction-store"]
metrics = []
transaction-store = []
