[package]
name = "nimiq-blockchain-albatross"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Persistent block storage for Nimiq's Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
thiserror = "1.0"
hex = "0.4"
log = "0.4"
parking_lot = "0.9"
rand = "0.7"

merkle-mountain-range = { git = "https://github.com/nimiq/merkle-mountain-range", branch= "main"}

beserial = { path = "../beserial" }
beserial_derive = { path = "../beserial/beserial_derive" }
nimiq-account = { path = "../primitives/account" }
nimiq-accounts = { path = "../accounts" }
nimiq-block-albatross = { path = "../primitives/block-albatross" }
nimiq-bls = { path = "../bls", features = ["beserial"] }
nimiq-collections = { path = "../collections" }
nimiq-database = { path = "../database", features = ["full-nimiq"] }
nimiq-genesis = { path = "../genesis" }
nimiq-hash = { path = "../hash" }
nimiq-keys = { path = "../keys" }
nimiq-primitives = { path = "../primitives" }
nimiq-transaction = { path = "../primitives/transaction" }
nimiq-tree-primitives = { path = "../accounts/tree-primitives" }
nimiq-utils = { path = "../utils", features = ["observer", "unique-ptr", "iterators", "time", "math"] }
nimiq-vrf = { path = "../vrf" }

[dev-dependencies]
atomic = "0.4"

nimiq-block-production-albatross = { path = "../block-production-albatross", features = ["test-utils"] }
nimiq-nano-sync = { path= "../nano-sync" }

[features]
metrics = []
