[package]
name = "nimiq-blockchain-base"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Common blockchain types for Nimiq's Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
failure = "0.1"
parking_lot = "0.9"
beserial = "0.1"
nimiq-account = "0.1"
nimiq-block-base = "0.1"
nimiq-database = "0.1"
nimiq-hash = "0.1"
nimiq-keys = "0.1"
nimiq-network-primitives = "0.1"
nimiq-primitives = "0.1"
nimiq-transaction = "0.1"
nimiq-tree-primitives = "0.1"
nimiq-utils = { version = "0.1", features = ["observer"] }
[features]
metrics = []