[package]
name = "nimiq-blockchain-base"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Common blockchain types for Nimiq's Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
failure = "0.1"
parking_lot = "0.9"

beserial = { path = "../beserial", version = "0.1" }
nimiq-account = { path = "../primitives/account", version = "0.1" }
nimiq-block-base = { path = "../primitives/block-base", version = "0.1" }
nimiq-database = { path = "../database", version = "0.1" }
nimiq-hash = { path = "../hash", version = "0.1" }
nimiq-keys = { path = "../keys", version = "0.1" }
nimiq-network-primitives = { path = "../network-primitives", version = "0.1" }
nimiq-primitives = { path = "../primitives", version = "0.1" }
nimiq-transaction = { path = "../primitives/transaction", version = "0.1" }
nimiq-tree-primitives = { path = "../accounts/tree-primitives", version = "0.1" }
nimiq-utils = { path = "../utils", version = "0.1", features = ["observer"] }

[features]
metrics = []